// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly if no application 1`] = `
<div>
  <p>
    Loading...
  </p>
  <div
    className="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-indeterminate"
    role="progressbar"
  >
    <div
      className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate"
      style={Object {}}
    />
    <div
      className="MuiLinearProgress-bar MuiLinearProgress-bar2Indeterminate MuiLinearProgress-barColorPrimary"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`renders correctly with permissions 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="makeStyles-headerContainer-1"
  >
    <div
      className="makeStyles-headerTitleContainer-5"
    >
      <div
        className=""
      >
        <h2
          className="MuiTypography-root makeStyles-headerTitle-6 MuiTypography-h2"
        >
          <span
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
              style={
                Object {
                  "marginRight": "8px",
                }
              }
            >
              <span
                aria-hidden={true}
                className="material-icons MuiIcon-root"
              >
                apps
              </span>
            </div>
            test-app
          </span>
        </h2>
      </div>
      <div
        className="makeStyles-headerActions-7"
      >
        <a
          aria-disabled={false}
          className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiButtonBase-root MuiIconButton-root MuiTypography-colorPrimary"
          href="http://example.org"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              aria-hidden={true}
              className="material-icons MuiIcon-root"
            >
              link
            </span>
          </span>
        </a>
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="Delete application"
          type="button"
        >
          <span
            className="MuiButton-label"
          >
            Delete
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    className="makeStyles-bodyContainer-2"
  >
    <div>
      <p
        className="MuiTypography-root MuiTypography-body1"
      >
        app description
      </p>
      <p
        className="MuiTypography-root MuiTypography-body2"
      >
        Created: 
        <strong>
          Invalid Date
        </strong>
      </p>
    </div>
    <div>
      <div
        className="MuiPaper-root makeStyles-tabNav-8 MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          className="MuiTabs-root"
        >
          <div
            className="MuiTabs-scroller MuiTabs-fixed"
            onScroll={[Function]}
            style={
              Object {
                "marginBottom": null,
                "overflow": "hidden",
              }
            }
          >
            <div
              className="MuiTabs-flexContainer MuiTabs-centered"
              onKeyDown={[Function]}
              role="tablist"
            >
              <button
                aria-controls="tabpanel-0"
                aria-selected={true}
                className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected"
                disabled={false}
                id="tab-0"
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex={0}
                type="button"
              >
                <span
                  className="MuiTab-wrapper"
                >
                  Application overview
                </span>
                <span
                  className="PrivateTabIndicator-root-9 PrivateTabIndicator-colorPrimary-10 MuiTabs-indicator"
                  style={Object {}}
                />
              </button>
              <button
                aria-controls="tabpanel-1"
                aria-selected={false}
                className="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary"
                disabled={false}
                id="tab-1"
                onBlur={[Function]}
                onClick={[Function]}
                onDragLeave={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                onMouseDown={[Function]}
                onMouseLeave={[Function]}
                onMouseUp={[Function]}
                onTouchEnd={[Function]}
                onTouchMove={[Function]}
                onTouchStart={[Function]}
                role="tab"
                tabIndex={-1}
                type="button"
              >
                <span
                  className="MuiTab-wrapper"
                >
                  Edit application
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          aria-labelledby="wrapped-tab-0"
          hidden={false}
          id="wrapped-tabpanel-0"
          role="tabpanel"
        >
          <div
            className="MuiGrid-root MuiGrid-container"
            style={
              Object {
                "margin": 0,
              }
            }
          >
            <div
              className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-xl-6"
            >
              <h6
                className="MuiTypography-root MuiTypography-subtitle1"
                style={
                  Object {
                    "padding": "1rem 0",
                  }
                }
              >
                Toggles
              </h6>
              <hr />
              <ul
                className="MuiList-root MuiList-padding"
              >
                <li
                  className="MuiListItem-root MuiListItem-gutters"
                  disabled={false}
                >
                  <div
                    className="MuiListItemAvatar-root"
                  >
                    <span
                      className="MuiSwitch-root"
                    >
                      <span
                        aria-disabled={true}
                        className="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-13 MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-disabled-15 Mui-disabled Mui-disabled Mui-disabled"
                        onBlur={[Function]}
                        onDragLeave={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyUp={[Function]}
                        onMouseDown={[Function]}
                        onMouseLeave={[Function]}
                        onMouseUp={[Function]}
                        onTouchEnd={[Function]}
                        onTouchMove={[Function]}
                        onTouchStart={[Function]}
                        tabIndex={-1}
                      >
                        <span
                          className="MuiIconButton-label"
                        >
                          <input
                            className="PrivateSwitchBase-input-16 MuiSwitch-input"
                            disabled={true}
                            onChange={[Function]}
                            type="checkbox"
                            value={true}
                          />
                          <span
                            className="MuiSwitch-thumb"
                          />
                        </span>
                      </span>
                      <span
                        className="MuiSwitch-track"
                      />
                    </span>
                  </div>
                  <div
                    className="MuiListItemText-root MuiListItemText-multiline"
                  >
                    <span
                      className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                    >
                      <a
                        href="/features/strategies/ToggleA"
                        onClick={[Function]}
                      >
                        ToggleA
                      </a>
                    </span>
                    <p
                      className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
                    >
                      this is A toggle
                    </p>
                  </div>
                </li>
                <li
                  className="MuiListItem-root MuiListItem-gutters"
                  disabled={false}
                >
                  <div
                    className="MuiListItemAvatar-root"
                  >
                    <span
                      aria-hidden={true}
                      className="material-icons MuiIcon-root"
                    >
                      report
                    </span>
                  </div>
                  <div
                    className="MuiListItemText-root MuiListItemText-multiline"
                  >
                    <span
                      className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                    >
                      <a
                        href="/features/create?name=ToggleB"
                        onClick={[Function]}
                      >
                        ToggleB
                      </a>
                    </span>
                    <p
                      className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
                    >
                      Missing, want to create?
                    </p>
                  </div>
                </li>
              </ul>
            </div>
            <div
              className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-xl-6"
            >
              <h6
                className="MuiTypography-root MuiTypography-subtitle1"
                style={
                  Object {
                    "padding": "1rem 0",
                  }
                }
              >
                Implemented strategies
              </h6>
              <hr />
              <ul
                className="MuiList-root MuiList-padding"
              >
                <li
                  className="MuiListItem-root MuiListItem-gutters"
                  disabled={false}
                >
                  <div
                    className="MuiListItemAvatar-root"
                  >
                    <span
                      aria-hidden={true}
                      className="material-icons MuiIcon-root"
                    >
                      extension
                    </span>
                  </div>
                  <div
                    className="MuiListItemText-root MuiListItemText-multiline"
                  >
                    <span
                      className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                    >
                      <a
                        href="/strategies/view/StrategyA"
                        onClick={[Function]}
                      >
                        StrategyA
                      </a>
                    </span>
                    <p
                      className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
                    >
                      A description
                    </p>
                  </div>
                </li>
                <li
                  className="MuiListItem-root MuiListItem-gutters"
                  disabled={false}
                >
                  <div
                    className="MuiListItemAvatar-root"
                  >
                    <span
                      aria-hidden={true}
                      className="material-icons MuiIcon-root"
                    >
                      report
                    </span>
                  </div>
                  <div
                    className="MuiListItemText-root MuiListItemText-multiline"
                  >
                    <span
                      className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                    >
                      <a
                        href="/strategies/create?name=StrategyB"
                        onClick={[Function]}
                      >
                        StrategyB
                      </a>
                    </span>
                    <p
                      className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
                    >
                      Missing, want to create?
                    </p>
                  </div>
                </li>
              </ul>
            </div>
            <div
              className="MuiGrid-root MuiGrid-item MuiGrid-grid-md-12 MuiGrid-grid-xl-12"
            >
              <h6
                className="MuiTypography-root MuiTypography-subtitle1"
                style={
                  Object {
                    "padding": "1rem 0",
                  }
                }
              >
                1
                 Instances registered
              </h6>
              <hr />
              <ul
                className="MuiList-root MuiList-padding"
              >
                <li
                  className="MuiListItem-root MuiListItem-gutters"
                  disabled={false}
                >
                  <div
                    className="MuiListItemAvatar-root"
                  >
                    <span
                      aria-hidden={true}
                      className="material-icons MuiIcon-root"
                    >
                      timeline
                    </span>
                  </div>
                  <div
                    className="MuiListItemText-root MuiListItemText-multiline"
                  >
                    <span
                      className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
                    >
                      instance-1 (4.0)
                    </span>
                    <p
                      className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
                    >
                      <span>
                        123.123.123.123
                         last seen at 
                        <small>
                          02/23/2017, 03:56:49 PM
                        </small>
                      </span>
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="wrapped-tab-1"
          hidden={true}
          id="wrapped-tabpanel-1"
          role="tabpanel"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly without permission 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
>
  <div
    className="makeStyles-headerContainer-1"
  >
    <div
      className="makeStyles-headerTitleContainer-5"
    >
      <div
        className=""
      >
        <h2
          className="MuiTypography-root makeStyles-headerTitle-6 MuiTypography-h2"
        >
          <span
            style={
              Object {
                "alignItems": "center",
                "display": "flex",
              }
            }
          >
            <div
              className="MuiAvatar-root MuiAvatar-circle MuiAvatar-colorDefault"
              style={
                Object {
                  "marginRight": "8px",
                }
              }
            >
              <span
                aria-hidden={true}
                className="material-icons MuiIcon-root"
              >
                apps
              </span>
            </div>
            test-app
          </span>
        </h2>
      </div>
      <div
        className="makeStyles-headerActions-7"
      >
        <a
          aria-disabled={false}
          className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiButtonBase-root MuiIconButton-root MuiTypography-colorPrimary"
          href="http://example.org"
          onBlur={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          role="button"
          tabIndex={0}
        >
          <span
            className="MuiIconButton-label"
          >
            <span
              aria-hidden={true}
              className="material-icons MuiIcon-root"
            >
              link
            </span>
          </span>
        </a>
      </div>
    </div>
  </div>
  <div
    className="makeStyles-bodyContainer-2"
  >
    <div>
      <p
        className="MuiTypography-root MuiTypography-body1"
      >
        app description
      </p>
      <p
        className="MuiTypography-root MuiTypography-body2"
      >
        Created: 
        <strong>
          Invalid Date
        </strong>
      </p>
    </div>
  </div>
</div>
`;
